--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,60 +1,74 @@
 body {
-    font-family: 'Open Sans', sans-serif;
+    background-image: url(../images/landscape_mountains_sun_140434_1920x1080.jpeg);
+    font-family: fantasy;
     font-size: 16px;
-  }
-  
-  textarea {
+    align-items: center;
+    line-height: 1;
+}
+
+.header {
+    align-items: center;
+}
+
+
+textarea {
     background: transparent;
     border: none;
     resize: none;
     color: #000000;
     border-left: 1px solid black;
     padding: 10px;
-  }
-  
-  .description {
+    font-family: serif;
+    text-align: center;
+
+}
+
+.description {
     white-space: pre-wrap;
-  }
-  
-  .time-block {
+}
+
+.time-block {
     border-radius: 15px;
-  }
-  
-  .row {
+}
+
+.row {
     border-top: 1px solid white;
-  }
-  
-  .hour {
+}
+
+.hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
-  }
-  
-  .past {
+    font-family: serif;
+}
+
+.past {
     background-color: #d3d3d3;
     color: white;
-  }
-  
-  .present {
-    background-color: #ff6961;
+    font-family: serif;
+}
+
+.present {
+    background-color: #8f241e;
     color: white;
-  }
-  
-  .future {
-    background-color: #77dd77;
+    font-family: serif;
+}
+
+.future {
+    background-color: #6f4f00;
     color: white;
-  }
-  
-  .saveBtn {
+    font-family: serif;
+}
+
+.saveBtn {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #06aed5;
+    background-color: rgb(202, 125, 25);
     color: white;
-  }
-  
-  .saveBtn i:hover {
+}
+
+.saveBtn i:hover {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
-  }
-  
+}
