--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,13 @@ textarea {
     text-align: center;
 
 }
+.{
+    margin-left: 85%;
+    color: black;
+    background-color: white;
+    border-color: purple;
+}
+
 
 .btn {
     margin-left: 85%;
